spices article added

--- a/references.bib
+++ b/references.bib
@@ -219,6 +219,25 @@
   file = {/Users/jinko/Zotero/storage/RVLYFHP2/Folsom et al. - 2014 - Physiological and Proteomic Analysis of Escherichia coli Iron-Limited Chemostat Growth.pdf}
 }
 
+@article{frankCompetencybasedMedicalEducation2010,
+  title = {Competency-Based Medical Education: Theory to Practice},
+  shorttitle = {Competency-Based Medical Education},
+  author = {Frank, Jason R. and Snell, Linda S. and Cate, Olle Ten and Holmboe, Eric S. and Carraccio, Carol and Swing, Susan R. and Harris, Peter and Glasgow, Nicholas J. and Campbell, Craig and Dath, Deepak and Harden, Ronald M. and Iobst, William and Long, Donlin M. and Mungroo, Rani and Richardson, Denyse L. and Sherbino, Jonathan and Silver, Ivan and Taber, Sarah and Talbot, Martin and Harris, Kenneth A.},
+  year = 2010,
+  month = aug,
+  journal = {Medical Teacher},
+  volume = {32},
+  number = {8},
+  pages = {638--645},
+  issn = {0142-159X, 1466-187X},
+  doi = {10.3109/0142159X.2010.501190},
+  urldate = {2025-12-21},
+  abstract = {Although competency-based medical education (CBME) has attracted renewed interest in recent years among educators and policy-makers in the health care professions, there is little agreement on many aspects of this paradigm. We convened a unique partnership -- the International CBME Collaborators -- to examine conceptual issues and current debates in CBME.},
+  langid = {english},
+  keywords = {Medical Education},
+  file = {/Users/jinko/Zotero/storage/NPWZVSDW/Frank et al. - 2010 - Competency-based medical education theory to practice.pdf}
+}
+
 @misc{frick-chengAlteredMotilityResponse2023,
   title = {Altered Motility in Response to Iron-Limitation Is Regulated by {{lpdA}} in Uropathogenic {{E}}. Coli {{CFT073}}},
   author = {{Frick-Cheng}, A. E. and Shea, A. E. and Roberts, J. R. and Smith, S. N. and Ohi, M. D. and Mobley, H. L. T.},
@@ -334,6 +353,61 @@
   isbn = {978-1-4160-4574-8 978-0-8089-2400-5},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/23CDSGC5/Hall et al. - 2011 - Guyton and Hall textbook of medical physiology Student consult. Activate at studentconsult.com. Sea.pdf}
+}
+
+@article{hardenEducationalStrategiesCurriculum1984,
+  title = {Educational Strategies in Curriculum Development: The {{SPICES}} Model},
+  shorttitle = {Educational Strategies in Curriculum Development},
+  author = {Harden, R. M. and Sowden, Susette and Dunn, W. R.},
+  year = 1984,
+  month = jul,
+  journal = {Medical Education},
+  volume = {18},
+  number = {4},
+  pages = {284--297},
+  issn = {0308-0110, 1365-2923},
+  doi = {10.1111/j.1365-2923.1984.tb01024.x},
+  urldate = {2025-12-21},
+  abstract = {Six education strategies have been identified relating to the curriculum in a medical school. Each issue can be represented as a spectrum or continuum: studentcentred / teacher-centred, problem-based / information-gathering, integrated / discipline-based, community-based / hospital-based, elective / uniform and systematic/ apprenticeship-based.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/KJYHN26X/Harden et al. - 1984 - Educational strategies in curriculum development the SPICES model.pdf}
+}
+
+@article{hardenEducationalStrategiesCurriculum1984a,
+  title = {Educational Strategies in Curriculum Development: The {{SPICES}} Model},
+  shorttitle = {Educational Strategies in Curriculum Development},
+  author = {Harden, R. M. and Sowden, Susette and Dunn, W. R.},
+  year = 1984,
+  month = jul,
+  journal = {Medical Education},
+  volume = {18},
+  number = {4},
+  pages = {284--297},
+  issn = {0308-0110, 1365-2923},
+  doi = {10.1111/j.1365-2923.1984.tb01024.x},
+  urldate = {2025-12-21},
+  abstract = {Six education strategies have been identified relating to the curriculum in a medical school. Each issue can be represented as a spectrum or continuum: studentcentred / teacher-centred, problem-based / information-gathering, integrated / discipline-based, community-based / hospital-based, elective / uniform and systematic/ apprenticeship-based.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/35PVW5JK/Harden et al. - 1984 - Educational strategies in curriculum development the SPICES model.pdf}
+}
+
+@article{hardenEducationalStrategiesCurriculum1984b,
+  title = {Educational Strategies in Curriculum Development: The {{SPICES}} Model},
+  shorttitle = {Educational Strategies in Curriculum Development},
+  author = {Harden, R. M. and Sowden, Susette and Dunn, W. R.},
+  year = 1984,
+  month = jul,
+  journal = {Medical Education},
+  volume = {18},
+  number = {4},
+  pages = {284--297},
+  issn = {0308-0110, 1365-2923},
+  doi = {10.1111/j.1365-2923.1984.tb01024.x},
+  urldate = {2025-12-21},
+  abstract = {Six education strategies have been identified relating to the curriculum in a medical school. Each issue can be represented as a spectrum or continuum: studentcentred / teacher-centred, problem-based / information-gathering, integrated / discipline-based, community-based / hospital-based, elective / uniform and systematic/ apprenticeship-based.},
+  langid = {english},
+  keywords = {Medical Education},
+  file = {/Users/jinko/Zotero/storage/EWF4PBYX/Harden et al. - 1984 - Educational strategies in curriculum development the SPICES model.pdf}
 }
 
 @article{hidalgoInhibitionEscherichiaColi2011,
@@ -535,6 +609,25 @@
   file = {/Users/jinko/Zotero/storage/9YZF54JT/Kobayashi et al. - 2001 - Novel Macrolide-Specific ABC-Type Efflux Transport.pdf}
 }
 
+@article{kulasegaramCognitionCurriculumRethinking2013,
+  title = {Cognition {{Before Curriculum}}: {{Rethinking}} the {{Integration}} of {{Basic Science}} and {{Clinical Learning}}},
+  shorttitle = {Cognition {{Before Curriculum}}},
+  author = {Kulasegaram, Kulamakan Mahan and Martimianakis, Maria Athina and Mylopoulos, Maria and Whitehead, Cynthia R. and Woods, Nicole N.},
+  year = 2013,
+  month = oct,
+  journal = {Academic Medicine},
+  volume = {88},
+  number = {10},
+  pages = {1578--1585},
+  issn = {1040-2446},
+  doi = {10.1097/ACM.0b013e3182a45def},
+  urldate = {2025-12-21},
+  abstract = {Purpose Integrating basic science and clinical concepts in the undergraduate medical curriculum is an important challenge for medical education. The health professions education literature includes a variety of educational strategies for integrating basic science and clinical concepts at multiple levels of the curriculum. To date, assessment of this literature has been limited.},
+  langid = {english},
+  keywords = {Medical Education},
+  file = {/Users/jinko/Zotero/storage/VBLH34HN/Kulasegaram et al. - 2013 - Cognition Before Curriculum Rethinking the Integration of Basic Science and Clinical Learning.pdf}
+}
+
 @book{kumarRobbinsCotranPathologic2021,
   title = {Robbins \& {{Cotran}} Pathologic Basis of Disease},
   editor = {Kumar, Vinay and Abbas, Abul K. and Aster, Jon C. and Turner, Jerrold R. and Perkins, James Alfred and Robbins, Stanley L. and Cotran, Ramzi S.},
@@ -732,6 +825,24 @@
   file = {/Users/jinko/Zotero/storage/48HQ77N2/Mi et al. - 2016 - Dimethyl Sulfoxide Protects Escherichia coli from Rapid Antimicrobial-Mediated Killing.pdf}
 }
 
+@article{ngClinicalReasoningRealworld2025,
+  title = {Clinical Reasoning in Real-World Practice: A Primer for Medical Trainees and Practitioners},
+  shorttitle = {Clinical Reasoning in Real-World Practice},
+  author = {Ng, Isaac K S and Goh, Wilson G W and Teo, Desmond B and Chong, Kar Mun and Tan, Li Feng and Teoh, Chia Meng},
+  year = 2025,
+  month = jan,
+  journal = {Postgraduate Medical Journal},
+  volume = {101},
+  number = {1191},
+  pages = {68--75},
+  issn = {0032-5473},
+  doi = {10.1093/postmj/qgae079},
+  urldate = {2025-12-21},
+  abstract = {Clinical reasoning is a crucial skill and defining characteristic of the medical profession, which relates to intricate cognitive and decision-making processes that are needed to solve real-world clinical problems. However, much of our current competency-based medical education systems have focused on imparting swathes of content knowledge and skills to our medical trainees, without an adequate emphasis on strengthening the cognitive schema and psychological processes that govern actual decision-making in clinical environments. Nonetheless, flawed clinical reasoning has serious repercussions on patient care, as it is associated with diagnostic errors, inappropriate investigations, and incongruent or suboptimal management plans that can result in significant morbidity and even mortality. In this article, we discuss the psychological constructs of clinical reasoning in the form of cognitive `thought processing' models and real-world contextual or emotional influences on clinical decision-making. In addition, we propose practical strategies, including pedagogical development of a personal cognitive schema, mitigating strategies to combat cognitive bias and flawed reasoning, and emotional regulation and self-care techniques, which can be adopted in medical training to optimize physicians' clinical reasoning in real-world practice that effectively translates learnt knowledge and skill sets into good decisions and outcomes.},
+  keywords = {Medical Education},
+  file = {/Users/jinko/Zotero/storage/CYZMMJX3/Ng et al. - 2025 - Clinical reasoning in real-world practice a primer for medical trainees and practitioners.pdf;/Users/jinko/Zotero/storage/ND7ZZ97C/qgae079.html}
+}
+
 @article{nikaidoMechanismsRNDMultidrug2009,
   title = {Mechanisms of {{RND Multidrug Efflux Pumps}}},
   author = {Nikaido, Hiroshi and Takatsuka, Yumiko},
@@ -855,6 +966,26 @@
   pmcid = {PMC6161082},
   pmid = {29870278},
   file = {/Users/jinko/Zotero/storage/JV9YC6MZ/Robinson et al. - 2018 - The iron hand of uropathogenic Escherichia coli the role of transition metal control in virulence.pdf}
+}
+
+@article{romboIntegrationBasicScience2025,
+  title = {Integration of {{Basic Science}} into {{Virtual Patient Cases}} to {{Enhance Clinical Reasoning Skills}}},
+  author = {Rombo, Karl and Borg, Alexander and Georg, Carina and Parodis, Ioannis},
+  year = 2025,
+  month = nov,
+  journal = {Information},
+  volume = {16},
+  number = {11},
+  pages = {950},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2078-2489},
+  doi = {10.3390/info16110950},
+  urldate = {2025-12-21},
+  abstract = {Objective: To explore medical students' perceptions towards the integration of basic science into virtual patient (VP) cases and to evaluate the impact on self-perceived clinical reasoning (CR) ability. Methods: We conducted a qualitative and explorative study involving 14 medical students during their clinical placement within rheumatology. Basic science elements were integrated into five VP scenarios using the virtual interactive case simulator. Students' perceptions were explored through the analysis of semi-structured interviews with seven students, followed by Malterud's systematic text condensation. Results: The analysis yielded five themes: (i) appreciation of basic science knowledge, (ii) ambiguity towards basic science as an obstacle for integration, (iii) the effect of integration on self-perceived clinical reasoning, (iv) engaging design of the basic science integration, and (v) low knowledge of clinical reasoning concepts. Despite positive perceptions, students demonstrated low motivation for independent engagement in practice. The students who completed the intervention reported enhanced self-perceived CR abilities, as evidenced by more comprehensive thinking processes. Conclusions: Basic science integration into VP cases was positively perceived and appeared to enhance self-perceived CR abilities. However, students' reluctance to independently engage posed implementation challenges. Early introduction of CR learning objectives and CR as a conceptual framework may improve motivation and provide coherence for the integration of basic science in the clinical components of medical education.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {Medical Education},
+  file = {/Users/jinko/Zotero/storage/FL9Y36QP/Rombo et al. - 2025 - Integration of Basic Science into Virtual Patient Cases to Enhance Clinical Reasoning Skills.pdf}
 }
 
 @article{sezonovEscherichiaColiPhysiology2007,
