--- a/blog/spices.qmd
+++ b/blog/spices.qmd
@@ -8,15 +8,15 @@ bibliography: ../references.bib
 
 I enjoy reading about medicine. I figured I should read about how medicine should be learnt. What follows is an argument for the more liberal forms of the SPICES model of medical education [@hardenEducationalStrategiesCurriculum1984]. The paper itself is relatively old, but many medical schools, especially in the States, have still not seriously re-evaluated their curriculum. Even though newer schools tend to be more liberal in their approach, the inertia of older programs makes the framework oddly current, and therefore still relevant.
 
-The SPICES model is a way of describing a curriculum by placing it on six continua. The acronym stands for student-centred versus teacher-centred learning, problem-based versus information-gathering learning, integrated versus discipline-based teaching, community-based versus hospital-based education, electives versus a standard programme, and systematic versus apprenticeship or opportunistic training. The point is not that every school must live at one extreme, but that schools should be honest about where they sit and whether that position makes sense.
+The SPICES model is a way of describing a curriculum by placing it on six continua. The acronym stands for student-centered versus teacher-centered learning, problem-based versus information-gathering learning, integrated versus discipline-based teaching, community-based versus hospital-based education, electives versus a standard programme, and systematic versus apprenticeship or opportunistic training. The point is not that every school must live at one extreme, but that schools should be honest about where they sit and whether that position makes sense.
 
 ### Student-centered vs Teacher-centered Learning
 
 Student-centered learning makes more sense to me. In its simplest form, it means the student has real responsibility over what gets learned and how, rather than acting as a passive receiver of whatever the instructor decides to deliver. It shifts the emphasis from teaching as performance to learning as an activity. I may not always wish to be taught, but I do wish to learn; the paper referenced a line like this attributed to Winston, and it captures the difference well. What matters in education is what the students learn, not what the teacher teaches. If you actually believe that, then you should prefer a model that makes the learner do the work of learning.
 
-The arguments for the student-centred approach are not complicated. It makes learning active rather than passive, and it trains the habit that matters most in medicine: the ability to identify what you don’t know and then go out of your way to fix it. It also allows the student to learn in a way that can actually be efficient for them rather than being forced into a one-size-fits-all method that cannot be guaranteed valuable on the instructor side. Besides, learning on your own is simply more fun. You get to do it your own way, and you get to chase coherence instead of pretending that compliance is understanding.
+The arguments for the student-centered approach are not complicated. It makes learning active rather than passive, and it trains the habit that matters most in medicine: the ability to identify what you don’t know and then go out of your way to fix it. It also allows the student to learn in a way that can actually be efficient for them rather than being forced into a one-size-fits-all method that cannot be guaranteed valuable on the instructor side. Besides, learning on your own is simply more fun. You get to do it your own way, and you get to chase coherence instead of pretending that compliance is understanding.
 
-The objections to student-centred learning tend to be weak. One objection is that many teachers have only experienced a teacher-centred approach. My objection is that this is not a valid argument against the principles of student-centred learning. It’s an argument that the familiar approach is convenient, not that it is better. Education should never be treated with such obstinance. Another objection is that students may be apprehensive because their previous experience was teacher-centred. My objection is harsher: if you’ve never gone out of your way to learn on your own and you feel threatened by the idea, in your lack of curiosity, you don’t deserve to be educated. Deal with it. Physicians have a moral obligation to learn for their patients without being spoon-fed—keeping up with literature, relearning what time has eroded, and updating what evidence overturns. If you can’t do that, don’t become a physician. Student-centred learning emphasizes exactly this form of active learning, and that is why I argue for it very liberally.
+The objections to student-centered learning tend to be weak. One objection is that many teachers have only experienced a teacher-centered approach. My objection is that this is not a valid argument against the principles of student-centered learning. It’s an argument that the familiar approach is convenient, not that it is better. Education should never be treated with such obstinance. Another objection is that students may be apprehensive because their previous experience was teacher-centered. My objection is harsher: if you’ve never gone out of your way to learn on your own and you feel threatened by the idea, in your lack of curiosity, you don’t deserve to be educated. Deal with it. Physicians have a moral obligation to learn for their patients without being spoon-fed—keeping up with literature, relearning what time has eroded, and updating what evidence overturns. If you can’t do that, don’t become a physician. Student-centered learning emphasizes exactly this form of active learning, and that is why I argue for it very liberally.
 
 ### Problem-based Learning vs Information-gathering Model
 
