--- a/blog/spices.qmd
+++ b/blog/spices.qmd
@@ -12,7 +12,7 @@ The SPICES model is a way of describing a curriculum by placing it on six contin
 
 ### Student-centered vs Teacher-centered Learning
 
-Student-centered learning makes more sense to me. In its simplest form, it means the student has real responsibility over what gets learned and how, rather than acting as a passive receiver of whatever the instructor decides to deliver. It shifts the emphasis from teaching as performance to learning as an activity. I may not always wish to be taught, but I do wish to learn; the paper referenced a line like this attributed to Winston, and it captures the difference well. What matters in education is what the students learn, not what the teacher teaches. If you actually believe that, then you should prefer a model that makes the learner do the work of learning.
+Student-centered learning makes more sense to me. In its simplest form, it means the student has real responsibility over what gets learned and how, rather than acting as a passive receiver of whatever the instructor decides to deliver. It shifts the emphasis from teaching as performance to learning as an activity. I may not always wish to be taught, but I do wish to learn; the paper referenced a line like this attributed to Churchill, and it captures the difference well. What matters in education is what the students learn, not what the teacher teaches. If you actually believe that, then you should prefer a model that makes the learner do the work of learning.
 
 The arguments for the student-centered approach are not complicated. It makes learning active rather than passive, and it trains the habit that matters most in medicine: the ability to identify what you don’t know and then go out of your way to fix it. It also allows the student to learn in a way that can actually be efficient for them rather than being forced into a one-size-fits-all method that cannot be guaranteed valuable on the instructor side. Besides, learning on your own is simply more fun. You get to do it your own way, and you get to chase coherence instead of pretending that compliance is understanding.
 
