--- a/books.qmd
+++ b/books.qmd
@@ -28,6 +28,8 @@ I Contain Multitudes: The Microbes Within Us and a Grander View of Life, *Ed Yon
 
 A Man Called Ove, *Fredrik Backman*
 
+The Remains of the Day, *Kazuo Ishiguro*
+
 The Ones Who Walk Away from Omelas, *Ursula K. Le Guin*
 
 1Q84, *Haruki Murakami*
