--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,24 @@
   file = {/Users/jinko/Zotero/storage/Q7T43KIE/Advani et al. - 2025 - State-of-the-Art Review Recurrent Uncomplicated Urinary Tract Infections in Women.pdf}
 }
 
+@article{antoniouTrimethoprimSulfamethoxazoleInducedHyperkalemiaPatients2010,
+  title = {Trimethoprim-{{Sulfamethoxazole}}--{{Induced Hyperkalemia}} in {{Patients Receiving Inhibitors}} of the {{Renin-Angiotensin System}}: {{A Population-Based Study}}},
+  shorttitle = {Trimethoprim-{{Sulfamethoxazole}}--{{Induced Hyperkalemia}} in {{Patients Receiving Inhibitors}} of the {{Renin-Angiotensin System}}},
+  author = {Antoniou, Tony},
+  year = 2010,
+  month = jun,
+  journal = {Archives of Internal Medicine},
+  volume = {170},
+  number = {12},
+  pages = {1045},
+  issn = {0003-9926},
+  doi = {10.1001/archinternmed.2010.142},
+  urldate = {2025-12-25},
+  langid = {english},
+  keywords = {hyperkalemia},
+  file = {/Users/jinko/Zotero/storage/YBG2FSSE/Antoniou - 2010 - Trimethoprim-Sulfamethoxazole–Induced Hyperkalemia in Patients Receiving Inhibitors of the Renin-Ang.pdf}
+}
+
 @article{bachellerURINARYTRACTINFECTIONS1997,
   title = {{{URINARY TRACT INFECTIONS}}},
   author = {Bacheller, Catherine D. and Bernstein, Jack M.},
@@ -345,7 +363,7 @@
 @book{hallGuytonHallTextbook2011,
   title = {Guyton and {{Hall}} Textbook of Medical Physiology},
   shorttitle = {Guyton and {{Hall}} Textbook of Medical Physiology},
-  author = {Hall, John E. and Hall, John E. and Guyton, Arthur C.},
+  author = {Hall, John E. and Guyton, Arthur C.},
   year = 2011,
   edition = {12. ed},
   publisher = {Saunders, Elsevier},
@@ -470,6 +488,23 @@
   file = {/Users/jinko/Zotero/storage/ZS8GRHFA/Hubálek - 2003 - Protectants used in the cryopreservation of microorganisms.pdf}
 }
 
+@article{hutchisonDesignSynthesisMinimal2016,
+  title = {Design and Synthesis of a Minimal Bacterial Genome},
+  author = {Hutchison, Clyde A. and Chuang, Ray-Yuan and Noskov, Vladimir N. and {Assad-Garcia}, Nacyra and Deerinck, Thomas J. and Ellisman, Mark H. and Gill, John and Kannan, Krishna and Karas, Bogumil J. and Ma, Li and Pelletier, James F. and Qi, Zhi-Qing and Richter, R. Alexander and Strychalski, Elizabeth A. and Sun, Lijie and Suzuki, Yo and Tsvetanova, Billyana and Wise, Kim S. and Smith, Hamilton O. and Glass, John I. and Merryman, Chuck and Gibson, Daniel G. and Venter, J. Craig},
+  year = 2016,
+  month = mar,
+  journal = {Science},
+  volume = {351},
+  number = {6280},
+  pages = {aad6253},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.aad6253},
+  urldate = {2025-12-25},
+  abstract = {Designing and building a minimal genome                            A goal in biology is to understand the molecular and biological function of every gene in a cell. One way to approach this is to build a minimal genome that includes only the genes essential for life. In 2010, a 1079-kb genome based on the genome of               Mycoplasma mycoides               (JCV-syn1.0) was chemically synthesized and supported cell growth when transplanted into cytoplasm. Hutchison III               et al.               used a design, build, and test cycle to reduce this genome to 531 kb (473 genes). The resulting JCV-syn3.0 retains genes involved in key processes such as transcription and translation, but also contains 149 genes of unknown function.                                         Science               , this issue p.               10.1126/science.aad6253                        ,              Cycles of design, building, and testing produced a 531-kilobase genome comprising 473 genes.           ,                             INTRODUCTION                                In 1984, the simplest cells capable of autonomous growth, the mycoplasmas, were proposed as models for understanding the basic principles of life. In 1995, we reported the first complete cellular genome sequences (                 Haemophilus influenza                 , 1815 genes, and                 Mycoplasma genitalium                 , 525 genes). Comparison of these sequences revealed a conserved core of about 250 essential genes, much smaller than either genome. In 1999, we introduced the method of global transposon mutagenesis and experimentally demonstrated that                 M. genitalium                 contains many genes that are nonessential for growth in the laboratory, even though it has the smallest genome known for an autonomously replicating cell found in nature. This implied that it should be possible to produce a minimal cell that is simpler than any natural one. Whole genomes can now be built from chemically synthesized oligonucleotides and brought to life by installation into a receptive cellular environment. We have applied whole-genome design and synthesis to the problem of minimizing a cellular genome.                                                        RATIONALE               Since the first genome sequences, there has been much work in many bacterial models to identify nonessential genes and define core sets of conserved genetic functions, using the methods of comparative genomics. Often, more than one gene product can perform a particular essential function. In such cases, neither gene will be essential, and neither will necessarily be conserved. Consequently, these approaches cannot, by themselves, identify a set of genes that is sufficient to constitute a viable genome. We set out to define a minimal cellular genome experimentally by designing and building one, then testing it for viability. Our goal is a cell so simple that we can determine the molecular and biological function of every gene.                                         RESULTS                                Whole-genome design and synthesis were used to minimize the 1079--kilobase pair (kbp) synthetic genome of                 M. mycoides                 JCVI-syn1.0.~ An initial design, based on collective knowledge of molecular biology in combination with limited transposon mutagenesis data, failed to produce a viable cell. Improved transposon mutagenesis methods revealed a class of quasi-essential genes that are needed for robust growth, explaining the failure of our initial design. Three more cycles of design, synthesis, and testing, with retention of quasi-essential genes, produced JCVI-syn3.0 (531 kbp, 473 genes). Its genome is smaller than that of any autonomously replicating cell found in nature. JCVI-syn3.0 has a doubling time of \textasciitilde 180 min, produces colonies that are morphologically similar to those of JCVI-syn1.0, and appears to be polymorphic when examined microscopically.                                                        CONCLUSION               The minimal cell concept appears simple at first glance but becomes more complex upon close inspection. In addition to essential and nonessential genes, there are many quasi-essential genes, which are not absolutely critical for viability but are nevertheless required for robust growth. Consequently, during the process of genome minimization, there is a trade-off between genome size and growth rate. JCVI-syn3.0 is a working approximation of a minimal cellular genome, a compromise between small genome size and a workable growth rate for an experimental organism. It retains almost all the genes that are involved in the synthesis and processing of macromolecules. Unexpectedly, it also contains 149 genes with unknown biological functions, suggesting the presence of undiscovered functions that are essential for life. JCVI-syn3.0 is a versatile platform for investigating the core functions of life and for exploring whole-genome design.                                                   Four design-build-test cycles produced JCVI-syn3.0.                                        (                     A                     ) The cycle for genome design, building by means of synthesis and cloning in yeast, and testing for viability by means of genome transplantation. After each cycle, gene essentiality is reevaluated by global transposon mutagenesis. (                     B                     ) Comparison of JCVI-syn1.0 (outer blue circle) with JCVI-syn3.0 (inner red circle), showing the division of each into eight segments. The red bars inside the outer circle indicate regions that are retained in JCVI-syn3.0. (                     C                     ) A cluster of JCVI-syn3.0 cells, showing spherical structures of varying sizes (scale bar, 200 nm).                                                                                            ,                             We used whole-genome design and complete chemical synthesis to minimize the 1079--kilobase pair synthetic genome of               Mycoplasma mycoides               JCVI-syn1.0. An initial design, based on collective knowledge of molecular biology combined with limited transposon mutagenesis data, failed to produce a viable cell. Improved transposon mutagenesis methods revealed a class of quasi-essential genes that are needed for robust growth, explaining the failure of our initial design. Three cycles of design, synthesis, and testing, with retention of quasi-essential genes, produced JCVI-syn3.0 (531 kilobase pairs, 473 genes), which has a genome smaller than that of any autonomously replicating cell found in nature. JCVI-syn3.0 retains almost all genes involved in the synthesis and processing of macromolecules. Unexpectedly, it also contains 149 genes with unknown biological functions. JCVI-syn3.0 is a versatile platform for investigating the core functions of life and for exploring whole-genome design.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/JNF2MR5L/Hutchison et al. - 2016 - Design and synthesis of a minimal bacterial genome.pdf}
+}
+
 @misc{hwangCdiGMPRequiredSwarming2025,
   title = {C-Di-{{GMP}} Is {{Required}} for {{Swarming}} in {{E}}. Coli: A {{Role}} for {{DgcO}} and {{Colanic Acid}}},
   shorttitle = {C-Di-{{GMP}} Is {{Required}} for {{Swarming}} in {{E}}. Coli},
@@ -554,6 +589,24 @@
   pmcid = {PMC427392},
   pmid = {15213138},
   file = {/Users/jinko/Zotero/storage/Y8NG7BML/Jones et al. - 2004 - Ultrastructure of Proteus mirabilis Swarmer Cell Rafts and Role of Swarming in Catheter-Associated U.pdf}
+}
+
+@article{juurlinkRatesHyperkalemiaPublication2004,
+  title = {Rates of {{Hyperkalemia}} after {{Publication}} of the {{Randomized Aldactone Evaluation Study}}},
+  author = {Juurlink, David N. and Mamdani, Muhammad M. and Lee, Douglas S. and Kopp, Alexander and Austin, Peter C. and Laupacis, Andreas and Redelmeier, Donald A.},
+  year = 2004,
+  month = aug,
+  journal = {New England Journal of Medicine},
+  volume = {351},
+  number = {6},
+  pages = {543--551},
+  publisher = {Massachusetts Medical Society},
+  issn = {0028-4793},
+  doi = {10.1056/NEJMoa040135},
+  urldate = {2025-12-25},
+  abstract = {The Randomized Aldactone Evaluation Study (RALES) showed that spironolactone reduces mortality in patients with severe heart failure; however, the drug can cause hyperkalemia, especially when given with angiotensin-converting--enzyme (ACE) inhibitors. The current study found that, after the publication of RALES, there was an abrupt increase in the rate of prescriptions for spironolactone and in hyperkalemia-associated morbidity and mortality in patients with heart failure who were receiving an ACE inhibitor. The Randomized Aldactone Evaluation Study (RALES) showed reduced mortality in patients with severe heart failure. After its publication, there was an increase in hyperkalemia-associated morbidity and mortality. Heart failure affects approximately 5 million persons annually in Canada and the United States.1 Medications are the mainstay of therapy, and in the past two decades there has been a shift away from the use of diuretics and cardiac glycosides and toward neurohumoral manipulation with angiotensin-converting--enzyme (ACE) inhibitors, beta-adrenergic antagonists, and aldosterone antagonists.1 Published in September 1999, the Randomized Aldactone Evaluation Study (RALES) demonstrated that treatment with spironolactone substantially reduced morbidity and mortality in patients with severe heart failure.2 Spironolactone is inexpensive and generally well tolerated, but in these patients it can provoke life-threatening hyperkalemia when combined with ACE inhibitors. .~.~.},
+  keywords = {hyperkalemia},
+  file = {/Users/jinko/Zotero/storage/56AXWISM/Juurlink et al. - 2004 - Rates of Hyperkalemia after Publication of the Randomized Aldactone Evaluation Study.pdf}
 }
 
 @article{kearnsFieldGuideBacterial2010,
