--- a/quotes.qmd
+++ b/quotes.qmd
@@ -8,7 +8,7 @@ title: Quotes
 > She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.
 
 ### Osamu Dazai
-> To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty.
+> To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty.　Oh, life is too painful, the reality that confirms the universal belief that it is best not to be born.
 
 > As long as you love me, all I want is to spend my whole life by your side.
 
@@ -16,6 +16,9 @@ title: Quotes
 > There are only the pursued, the pursuing, the busy and the tired.
 
 > Let us learn to show our friendship for a man when he is alive and not after he is dead.
+
+### Kazuo Ishiguro
+> There was surely nothing to indicate at the time that such evidently small incidents would render whole dreams forever irredeemable.
 
 ### Sarah Kane
 > There's not a drug on earth can make life meaningful.
