--- a/quotes.qmd
+++ b/quotes.qmd
@@ -7,6 +7,9 @@ title: Quotes
 
 > She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.
 
+### Anton Chekhov
+> I realized that when you love someone, your reasoning about that love should be based on what is supreme, on what is more important than happiness or unhappiness, sin or virtue, in the way that they are usually understood, otherwise it is not worth reasoning at all.
+
 ### Osamu Dazai
 > To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty. Oh, life is too painful, the reality that confirms the universal belief that it is best not to be born.
 
