took out the writings page

--- a/references.bib
+++ b/references.bib
@@ -878,6 +878,18 @@
   file = {/Users/jinko/Zotero/storage/48HQ77N2/Mi et al. - 2016 - Dimethyl Sulfoxide Protects Escherichia coli from Rapid Antimicrobial-Mediated Killing.pdf}
 }
 
+@book{neyMetaphysicsIntroduction2014,
+  title = {Metaphysics: {{An Introduction}}},
+  shorttitle = {Metaphysics},
+  author = {Ney, Alyssa},
+  year = 2014,
+  publisher = {Routledge, Taylor \& Francis Group},
+  address = {London New York},
+  isbn = {978-0-415-64074-9 978-0-415-64075-6},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/ANYUMDBI/Ney - 2014 - Metaphysics an introduction.pdf}
+}
+
 @article{ngClinicalReasoningRealworld2025,
   title = {Clinical Reasoning in Real-World Practice: A Primer for Medical Trainees and Practitioners},
   shorttitle = {Clinical Reasoning in Real-World Practice},
@@ -948,6 +960,41 @@
   copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/9I3ALZSJ/Obadia et al. - 2007 - Influence of Tyrosine-Kinase Wzc Activity on Colanic Acid Production in Escherichia coli K12 Cells.pdf}
+}
+
+@article{ohaganDicingUnknown2004,
+  title = {Dicing with the {{Unknown}}},
+  author = {O'Hagan, Tony},
+  year = 2004,
+  month = sep,
+  journal = {Significance},
+  volume = {1},
+  number = {3},
+  pages = {132--133},
+  issn = {1740-9705, 1740-9713},
+  doi = {10.1111/j.1740-9713.2004.00050.x},
+  urldate = {2026-01-07},
+  abstract = {Abstract             There are many things that I am uncertain about, says Tony O'Hagan. Some are merely unknown to me, while others are unknowable. This article is about different kinds of uncertainty, and how the distinction between them impinges on the foundations of Probability and Statistics.},
+  copyright = {https://academic.oup.com/journals/pages/open\_access/funder\_policies/chorus/standard\_publication\_model},
+  langid = {english}
+}
+
+@article{ohaganDicingUnknown2004a,
+  title = {Dicing with the {{Unknown}}},
+  author = {O'Hagan, Tony},
+  year = 2004,
+  month = sep,
+  journal = {Significance},
+  volume = {1},
+  number = {3},
+  pages = {132--133},
+  issn = {1740-9705, 1740-9713},
+  doi = {10.1111/j.1740-9713.2004.00050.x},
+  urldate = {2026-01-07},
+  abstract = {Abstract             There are many things that I am uncertain about, says Tony O'Hagan. Some are merely unknown to me, while others are unknowable. This article is about different kinds of uncertainty, and how the distinction between them impinges on the foundations of Probability and Statistics.},
+  copyright = {https://academic.oup.com/journals/pages/open\_access/funder\_policies/chorus/standard\_publication\_model},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/IQ8G7TIZ/O'Hagan - 2004 - Dicing with the Unknown.pdf}
 }
 
 @article{otooleMicrotiterDishBiofilm2011,
